--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,7 @@
 
 
 body {
-	font-family: 'Coming Soon', cursive;
+	font-family: 'PT Serif', serif;
 	color: #e5e5e5;
 	font-size: 12px;
 	background:#bfbfbf;
@@ -12,7 +12,7 @@ body {
 
 
 h1, h2 {
-	font-family: 'Coming Soon', cursive;
+	font-family: 'PT Serif', cursive;
 	font-weight: 300;
 	margin:0 0 15px 0;
 }
@@ -77,7 +77,7 @@ a {
 	min-height: 50px;
 	padding:30px 0;
 	font-size: 18px;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Open Sans', serif;
 	font-weight: 300;
 }
 
